feat: finish docs with swagger
